# synchronizer

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: run_pytest.yaml
src/: file.py  settings.py  synchronizer.py
tests/: test_file.py  test_synchronizer.py
